<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/gallery_motion"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/fragment_gallery_xml_gallery_layout_scene">

        <ImageView
            android:id="@+id/accept_selected_photos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:visibility="gone"
            android:contentDescription="@string/accept_selected_photos"
            android:focusable="true"
            android:src="@drawable/ic_accept" />

        <ImageView
            android:id="@+id/line_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/dialog_line"
            android:src="@drawable/dialog_line" />

        <ImageView
            android:id="@+id/gallery_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/delete_selected_photos"
            android:focusable="true"
            android:src="@drawable/ic_back_arrow" />

        <TextView
            android:id="@+id/gallery_menu_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gallery"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/gallery_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="3"
            tools:listitem="@layout/gallery_recycler_item"/>

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>


