<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".settings.SettingsFragment">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/show_date"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/settings_view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_date" />

        <TextView
            android:id="@+id/settings_sort_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/sort"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_view1" />

        <RadioGroup
            android:id="@+id/settings_sort_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_sort_text">

            <RadioButton
                android:id="@+id/sort_DESC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_first"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <RadioButton
                android:id="@+id/sort_ASC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/old_first"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

        </RadioGroup>

        <View
            android:id="@+id/settings_view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_sort_radio_group" />

        <TextView
            android:id="@+id/setting_filter_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/filter"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_view2" />

        <RadioGroup
            android:id="@+id/settings_filter_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setting_filter_text"
            android:padding="8dp">

            <RadioButton
                android:id="@+id/filter_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <RadioButton
                android:id="@+id/filter_only_notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/only_notes"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <RadioButton
                android:id="@+id/filter_only_photos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/only_photos"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>