<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar_note_main"
                style="@style/ToolbarStyle"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:menu="@menu/note_main_menu"
                app:title="@string/app_name" />
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:id="@+id/main_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context=".ui.AllNotesFragment"
            android:orientation="vertical">

            <EditText
                android:id="@+id/search_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_4"
                android:layout_marginEnd="@dimen/dp_8"
                android:autofillHints="@string/search"
                android:hint="@string/search"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:visibility="gone"
                tools:ignore="LabelFor"
                tools:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/recycler_item_main" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_to_insert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/dp_32"
            android:contentDescription="@string/insert_note"
            android:src="@drawable/ic_add"
            android:text="@string/save"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:backgroundTint="@color/secondaryLightColor" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>