<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="firstNote"
            type="com.example.noteexample.database.FirstNote" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/colon_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:gravity="center"
            android:text="@string/colon"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkbox_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"

            app:layout_constraintBottom_toBottomOf="@id/colon_edit"
            app:layout_constraintStart_toEndOf="@id/colon_edit"
            app:layout_constraintTop_toTopOf="@id/colon_edit"
            tools:text=" " />

        <EditText
            android:id="@+id/edit_text_checkbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/note"
            android:background="@android:color/transparent"
            android:hint="@string/note"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="400"
            app:firstNoteText="@{firstNote}"
            app:layout_constraintBottom_toBottomOf="@+id/checkbox_edit"
            app:layout_constraintEnd_toStartOf="@+id/delete_first_note_item_button"
            app:layout_constraintStart_toEndOf="@+id/checkbox_edit"
            app:layout_constraintTop_toTopOf="@+id/checkbox_edit"
            tools:ignore="LabelFor" />

        <ImageView
            android:id="@+id/delete_first_note_item_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/clear_row"
            android:src="@drawable/ic_clear_normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>